version/0.17/_sources/api/solver/_autosummary/settings/lic_child.rst.txt
:orphan:

.. _lic_child:

lic_child
=========

.. autoclass:: ansys.fluent.core.solver.settings_232.lic_child.lic_child
    :show-inheritance:

.. rubric:: Attributes

========================================================   ====================================

Attribute                                                                               Summary

========================================================   ====================================
:ref:`name <name_1>`                                                              'name' child.

:ref:`field <field>`                                                             'field' child.

:ref:`vector_field <vector_field>`                                        'vector_field' child.

:ref:`vector_phase <vector_phase>`                                        'vector_phase' child.

:ref:`surfaces_list <surfaces_list>`                                     'surfaces_list' child.

:ref:`surfaces <surfaces>`                                                    'surfaces' child.

:ref:`lic_color_by_field <lic_color_by_field>`                      'lic_color_by_field' child.

:ref:`lic_color <lic_color>`                                                 'lic_color' child.

:ref:`lic_oriented <lic_oriented>`                                        'lic_oriented' child.

:ref:`lic_normalize <lic_normalize>`                                     'lic_normalize' child.

:ref:`lic_pixel_interpolation <lic_pixel_interpolation>`       'lic_pixel_interpolation' child.

:ref:`lic_max_steps <lic_max_steps>`                                     'lic_max_steps' child.

:ref:`texture_spacing <texture_spacing>`                               'texture_spacing' child.

:ref:`texture_size <texture_size>`                                        'texture_size' child.

:ref:`lic_intensity_factor <lic_intensity_factor>`                'lic_intensity_factor' child.

:ref:`lic_image_filter <lic_image_filter>`                            'lic_image_filter' child.

:ref:`lic_intensity_alpha <lic_intensity_alpha>`                   'lic_intensity_alpha' child.

:ref:`lic_fast <lic_fast>`                                                    'lic_fast' child.

:ref:`gray_scale <gray_scale>`                                              'gray_scale' child.

:ref:`image_to_display <image_to_display>`                            'image_to_display' child.

:ref:`range_option <range_option>`                                        'range_option' child.

:ref:`color_map <color_map>`                                                 'color_map' child.

:ref:`draw_mesh <draw_mesh>`                                                 'draw_mesh' child.

:ref:`mesh_object <mesh_object>`                                           'mesh_object' child.

:ref:`display_state_name <display_state_name>`                      'display_state_name' child.

========================================================   ====================================

.. rubric:: Methods

======================================   =============================

Method                                                         Summary

======================================   =============================
:ref:`display <display_3>`                          'display' command.

:ref:`update_min_max <update_min_max>`       'update_min_max' command.

======================================   =============================

.. rubric:: Included in:

================   ================

Parent                      Summary

================   ================
:ref:`lic <lic>`       'lic' child.

================   ================

